<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/header_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/slideshow_margin"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/back_button_icon_size"
            android:layout_height="@dimen/back_button_icon_size"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button_selector" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/smart_growthalbum"
            android:textColor="@drawable/back_button_text_selector"
            android:textSize="@dimen/function_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/green_bg"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_unlabeled"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unlabeled"
            android:textColor="@color/white"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tv_labeled"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/labeled"
            android:textColor="@color/transparent_white"
            android:textSize="14sp"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />


</LinearLayout>