<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2009, Google Inc.
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<!--
This layout file is used by the AlertDialog when displaying a list of items.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/confirm_dialog_width"
    android:layout_height="@dimen/confirm_dialog_height"
    android:layout_gravity="center"
    android:background="@drawable/confirm_dialog_bg"
    android:gravity="center"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/confirm_deleting_message"
        android:textColor="@color/black"
        android:textSize="@dimen/confirm_dialog_message_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/back_button_icon_margin"
        android:layout_marginRight="@dimen/back_button_icon_margin"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/confirm_dialog_delete_button_selector"
            android:text="@string/cancel"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/confirm_dialog_delete_button_selector"
            android:text="@string/remove"
            android:textColor="@color/remove_button_color" />

    </LinearLayout>

</LinearLayout>
