<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/back_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:scaleType="fitCenter"
                android:src="@drawable/back_button_selector" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="@string/wifi_direct_transfer"
                android:textColor="@drawable/back_button_text_selector"
                android:textSize="@dimen/function_text_size" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/dp_16"
            android:orientation="horizontal">
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_direct_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_16"
                android:padding="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/enable_p2p_button"
                android:textSize="@dimen/sp_20"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_common_bg"
                />
            <TextView
                android:id="@+id/tv_direct_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/discover_peers_button"
                android:textSize="@dimen/sp_20"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_common_bg"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/dp_16"
        android:orientation="horizontal">
        <fragment
            android:id="@+id/frag_list"
            class="com.wifidirect.DeviceListFragment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_16"
            >
            <!-- Preview: layout=@layout/row_devices -->
        </fragment>
        <fragment
            android:id="@+id/frag_detail"
            class="com.wifidirect.DeviceDetailFragment"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent">
            <!-- Preview: layout=@layout/device_detail -->
        </fragment>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:gravity="left"
        android:layout_gravity="bottom"
        android:text="@string/wifi_tip"
        android:textColor="@drawable/back_button_text_selector"
        android:textSize="@dimen/sp_18" />
</LinearLayout>
