<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/back_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/back_button_icon_size"
            android:layout_height="@dimen/back_button_icon_size"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button_selector" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/text_video"
            android:textColor="@drawable/back_button_text_selector"
            android:textSize="@dimen/function_text_size" />

    </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_marginLeft="80dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/text_local"
                android:textSize="32sp"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_radiobutton_bg"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                />
            <RadioButton
                android:visibility="gone"
                android:id="@+id/rb_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:text="@string/text_cloud"
                android:textSize="32sp"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_radiobutton_bg"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                />
            <RadioButton
                android:visibility="visible"
                android:id="@+id/rb_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:text="@string/text_watch_history"
                android:textSize="32sp"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_radiobutton_bg"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                />
        </RadioGroup>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp" />
        <Button
            android:id="@+id/btn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:button="@null"
            android:text="@string/text_list"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_button_blue_bg_circle_rect"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <Button

            android:id="@+id/btn_list_for_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:button="@null"
            android:text="@string/text_list"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_button_blue_bg_circle_rect"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/back_button_text_color_normal"
        />
    <FrameLayout
        android:visibility="visible"
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    </FrameLayout>

</LinearLayout>